# IPRAE

./: .gitignore  DataPipeline.py  Dockerfile  InvestmentPortfolioStressTester.py  README.md  api.py  dashboard.py  docker-compose.yml  iprae_community.db  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
tests/: test_api.py  test_engine.py
