[project]
name = "iprae"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.4.3",
    "pandas>=2.3.3",
    "plotly>=6.6.0",
    "seaborn>=0.13.2",
    "streamlit>=1.55.0",
    "yfinance>=1.2.0",
]
